src/runtime/tests/golden/errors/14_continue_outside_loop/source.z42
namespace Demo;

void Main() {
    continue;
}
